[package]
name = "midi-convert"
version = "0.1.2"
edition = "2021"
rust-version = "1.60.0"

authors = [
    "Mendelt Siebenga <msiebenga@gmail.com>",
    "Alex Norman <alex@x37v.info>",
]
license = "MIT/Apache-2.0"
description = "Utilities for converting into/from midi_types::MidiMessage"
repository = "https://github.com/rust-midi/midi-convert"
categories = ["no-std", "api-bindings", "multimedia::audio"]
keywords = ["midi"]
readme = "README.md"

[dependencies]
midi-types = { version = "0.1.6" }
defmt = { version = "0.3.2", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"

[features]
defmt = ["dep:defmt", "midi-types/defmt"]
