[package]
name = "midi-convert"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"

authors = [
    "Mendelt Siebenga <msiebenga@gmail.com>",
    "Alex Norman <alex@x37v.info>",
]
license = "MIT/Apache-2.0"
description = "Utilities for converting into/from midi_types::MidiMessage"
repository = "https://github.com/rust-midi/midi-convert"
categories = ["no-std", "api-bindings", "multimedia::audio"]
keywords = ["midi"]
readme = "README.md"

[dependencies]
midi-types = { version = "0.2.1" }
defmt = { version = "1.0", optional = true }

[features]
defmt = ["dep:defmt", "midi-types/defmt"]
